--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=80
-server.servlet.context-path=/Shopme
+server.servlet.context-path=/MyShop
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
